<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/image_of_two_dices"
        android:src="@drawable/dices" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/welcome_to_the_ndice_game"
        android:textColor="@color/textColor"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:text="@string/enter_your_credentials"
        android:textColor="@color/textColor"
        android:textSize="26sp"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/user"
            android:contentDescription="@string/user_icon_image" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/lock"
            android:contentDescription="@string/password_icon_image" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/textColor"
            android:textColorHint="@color/textColor"
            tools:ignore="TextContrastCheck"
            android:importantForAutofill="no" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="340dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:backgroundTint="#009688"
            android:text="@string/login"
            android:textColor="#000000"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:backgroundTint="#009688"
            android:text="@string/sign_up"
            android:textColor="#000000"
            tools:ignore="ButtonStyle" />


    </LinearLayout>


</RelativeLayout>