<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:padding="20dp">

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/image_of_two_dices"
        android:src="@drawable/dices" />

    <TextView
        android:id="@+id/tvVar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/dice_game"
        android:textColor="@color/textColor"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="-20dp"
        android:layout_below="@+id/tvVar2"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text=""
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="35sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_result"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_playerName"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/player"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/cpu"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivVar1"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:contentDescription="@string/dice_of_player"
                android:padding="10dp"
                android:src="@drawable/dice6"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/ivVar2"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:baselineAligned="false"
                android:contentDescription="@string/dice_of_cpu"
                android:padding="10dp"
                android:src="@drawable/dice6"
                tools:ignore="ImageContrastCheck" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_betAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/bet_amount"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="30sp"
            android:textStyle="bold" />

        <SeekBar
            android:id="@+id/sb_bet"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:max="100"
            android:min="1"
            android:progress="1"
            android:progressDrawable="@drawable/custom_progress"
            android:thumb="@drawable/chip_1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/btn_roll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/roll_dice"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn_stats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/view_stats"
                android:textSize="30sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/log_out"
            android:textSize="30sp" />

    </LinearLayout>

</RelativeLayout>
