<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".StatsActivity">

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/image_of_two_dices"
        android:src="@drawable/dices" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/your_stats"
        android:textColor="@color/textColor"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text=""
        android:textColor="@color/textColor"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="340dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_goBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/goBack"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/reset"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</RelativeLayout>